creation of the qr code container and centralized card

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
 </head>
 
-<body>
-
+<body class="qr-container">
+  <main class="qr-container__card"></main>
 </body>
 
 </html>
