adding qr code image

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 </head>
 
 <body class="qr-container">
-  <main class="qr-container__card"></main>
+  <main class="qr-container__card">
+    <img class="qr-container__card__img" src="img/image-qr-code.png" alt="qr code">
+  </main>
 </body>
 
 </html>
