adding qr code title

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body class="qr-container">
   <main class="qr-container__card">
     <img class="qr-container__card__img" src="img/image-qr-code.png" alt="qr code">
+    <h1 class="qr-container__card__title">Improve your front-end skills by building projects</h1>
   </main>
 </body>
 
