adding qr code text

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <main class="qr-container__card">
     <img class="qr-container__card__img" src="img/image-qr-code.png" alt="qr code">
     <h1 class="qr-container__card__title">Improve your front-end skills by building projects</h1>
+    <p class="qr-container__card__text">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
   </main>
 </body>
 
